[gd_scene load_steps=8 format=2]

[ext_resource path="res://ControlPanel.gd" type="Script" id=1]
[ext_resource path="res://font_x20.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/print.png" type="Texture" id=3]
[ext_resource path="res://assets/clear.png" type="Texture" id=4]
[ext_resource path="res://assets/gene.png" type="Texture" id=5]
[ext_resource path="res://assets/champion.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 0.458824 )

[node name="ControlPanel" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
visible = false
margin_left = 671.985
margin_top = 331.66
margin_right = 1021.98
margin_bottom = 598.66
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 339.995
margin_bottom = 257.0

[node name="Speedometer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 329.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/Speedometer"]
margin_right = 283.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Speed"

[node name="Speed" type="Label" parent="Panel/VBoxContainer/Speedometer"]
margin_left = 287.0
margin_right = 329.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "100"

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 781.833
margin_top = 234.507
margin_right = 1018.83
margin_bottom = 288.507
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlCenter" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 230.0
margin_bottom = 47.0

[node name="CheckButton" type="CheckButton" parent="PanelContainer/ControlCenter"]
margin_right = 223.0
margin_bottom = 40.0
pressed = true
text = "Display Manual Center"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display Sensor" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 830.186
margin_top = 106.683
margin_right = 1018.19
margin_bottom = 160.683
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlCenter" type="VBoxContainer" parent="Display Sensor"]
margin_left = 7.0
margin_top = 7.0
margin_right = 181.0
margin_bottom = 47.0

[node name="CheckButton" type="CheckButton" parent="Display Sensor/ControlCenter"]
margin_right = 174.0
margin_bottom = 40.0
text = "Display Sensor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelfDrive" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 839.515
margin_top = 172.465
margin_right = 1017.51
margin_bottom = 226.465
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlCenter" type="VBoxContainer" parent="SelfDrive"]
margin_left = 7.0
margin_top = 7.0
margin_right = 171.0
margin_bottom = 47.0

[node name="CheckButton" type="CheckButton" parent="SelfDrive/ControlCenter"]
margin_right = 164.0
margin_bottom = 40.0
text = "Manual Drive"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigControl" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 801.383
margin_top = 1.10501
margin_right = 1024.38
margin_bottom = 55.105
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConfigControl"]
margin_left = 7.0
margin_top = 7.0
margin_right = 215.997
margin_bottom = 90.0

[node name="passion" type="HBoxContainer" parent="ConfigControl/VBoxContainer"]
margin_right = 208.0
margin_bottom = 25.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfigControl/VBoxContainer/passion"]
margin_right = 81.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "passion"
valign = 1

[node name="Slider" type="HSlider" parent="ConfigControl/VBoxContainer/passion"]
margin_left = 96.0
margin_right = 159.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 0.99
step = 0.01
value = 0.99
tick_count = 10
ticks_on_borders = true

[node name="Value" type="Label" parent="ConfigControl/VBoxContainer/passion"]
margin_left = 174.0
margin_right = 208.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "0.1"
valign = 1

[node name="turn" type="HBoxContainer" parent="ConfigControl/VBoxContainer"]
margin_top = 29.0
margin_right = 208.0
margin_bottom = 54.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfigControl/VBoxContainer/turn"]
margin_right = 105.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "turn angle"
valign = 1

[node name="Slider" type="HSlider" parent="ConfigControl/VBoxContainer/turn"]
margin_left = 120.0
margin_right = 159.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 60.0
step = 1.0
value = 22.0
tick_count = 10
ticks_on_borders = true

[node name="Value" type="Label" parent="ConfigControl/VBoxContainer/turn"]
margin_left = 174.0
margin_right = 208.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "0.1"
valign = 1

[node name="population" type="HBoxContainer" parent="ConfigControl/VBoxContainer"]
margin_top = 58.0
margin_right = 208.0
margin_bottom = 83.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfigControl/VBoxContainer/population"]
margin_right = 83.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "learning"
valign = 1

[node name="Slider" type="HSlider" parent="ConfigControl/VBoxContainer/population"]
margin_left = 98.0
margin_right = 165.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 100.0
step = 1.0
value = 25.0
tick_count = 10
ticks_on_borders = true

[node name="Value" type="Label" parent="ConfigControl/VBoxContainer/population"]
margin_left = 180.0
margin_right = 208.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "25"
valign = 1

[node name="Stats" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.73987
margin_top = 2.72254
margin_right = 305.742
margin_bottom = 84.7225
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlCenter" type="VBoxContainer" parent="Stats"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.002
margin_bottom = 75.0

[node name="Generation" type="HBoxContainer" parent="Stats/ControlCenter"]
margin_right = 286.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="Stats/ControlCenter/Generation"]
margin_right = 100.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Stats/ControlCenter/Generation/HBoxContainer"]
margin_right = 88.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.427451, 0.447059, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Generation:"
uppercase = true

[node name="generation" type="Label" parent="Stats/ControlCenter/Generation/HBoxContainer"]
margin_left = 92.0
margin_right = 100.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.427451, 0.447059, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "0"
uppercase = true

[node name="lives" type="HBoxContainer" parent="Stats/ControlCenter/Generation"]
margin_left = 104.0
margin_right = 183.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Stats/ControlCenter/Generation/lives"]
margin_right = 67.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.419608, 0.419608, 0.419608, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Live Cars:"
uppercase = true

[node name="text" type="Label" parent="Stats/ControlCenter/Generation/lives"]
margin_left = 71.0
margin_right = 79.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.419608, 0.419608, 0.419608, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "0"
uppercase = true

[node name="HB" type="HBoxContainer" parent="Stats/ControlCenter"]
margin_top = 18.0
margin_right = 286.0
margin_bottom = 32.0

[node name="first" type="HBoxContainer" parent="Stats/ControlCenter/HB"]
margin_right = 101.0
margin_bottom = 14.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Stats/ControlCenter/HB/first"]
margin_right = 69.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "1st place:"
uppercase = true

[node name="progress" type="Label" parent="Stats/ControlCenter/HB/first"]
margin_left = 73.0
margin_right = 101.0
margin_bottom = 14.0
text = "10%"

[node name="second" type="HBoxContainer" parent="Stats/ControlCenter/HB"]
margin_left = 105.0
margin_right = 212.0
margin_bottom = 14.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Stats/ControlCenter/HB/second"]
margin_right = 75.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 1, 0.345098, 1 )
text = "2nd place:"
uppercase = true

[node name="progress" type="Label" parent="Stats/ControlCenter/HB/second"]
margin_left = 79.0
margin_right = 107.0
margin_bottom = 14.0
text = "10%"

[node name="speed" type="HBoxContainer" parent="Stats/ControlCenter"]
margin_top = 36.0
margin_right = 286.0
margin_bottom = 50.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Stats/ControlCenter/speed"]
margin_right = 51.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "Speed : "
uppercase = true

[node name="stat" type="Label" parent="Stats/ControlCenter/speed"]
margin_left = 55.0
margin_right = 83.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
text = "10%"

[node name="best" type="HBoxContainer" parent="Stats/ControlCenter"]
margin_top = 54.0
margin_right = 286.0
margin_bottom = 68.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Stats/ControlCenter/best"]
margin_right = 99.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0.890196, 1 )
text = "Global BEST : "
uppercase = true

[node name="stat" type="Label" parent="Stats/ControlCenter/best"]
margin_left = 103.0
margin_right = 123.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0.890196, 1 )
text = "0%"

[node name="DiscardBestBoi" type="PanelContainer" parent="."]
margin_left = 311.949
margin_top = 2.07068
margin_right = 411.949
margin_bottom = 114.071
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DiscardBestBoi"]
margin_left = 7.0
margin_top = 7.0
margin_right = 93.0
margin_bottom = 105.0

[node name="Label" type="Label" parent="DiscardBestBoi/VBoxContainer"]
margin_right = 86.0
margin_bottom = 14.0
text = "Discard boi"
align = 3
uppercase = true

[node name="CheckButton" type="TextureButton" parent="DiscardBestBoi/VBoxContainer"]
margin_top = 18.0
margin_right = 86.0
margin_bottom = 98.0
texture_normal = ExtResource( 4 )

[node name="CarGenerator" type="PanelContainer" parent="."]
margin_left = 415.126
margin_top = 0.36319
margin_right = 509.126
margin_bottom = 112.363
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CarGenerator"]
margin_left = 7.0
margin_top = 7.0
margin_right = 87.0
margin_bottom = 105.0

[node name="Label" type="Label" parent="CarGenerator/VBoxContainer"]
margin_right = 80.0
margin_bottom = 14.0
text = "Next Gene"
align = 3
uppercase = true

[node name="CheckButton" type="TextureButton" parent="CarGenerator/VBoxContainer"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 98.0
texture_normal = ExtResource( 5 )

[node name="PrintNN" type="PanelContainer" parent="."]
margin_left = 603.795
margin_top = 0.462277
margin_right = 697.795
margin_bottom = 112.462
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="PrintNN"]
margin_left = 7.0
margin_top = 7.0
margin_right = 87.0
margin_bottom = 105.0

[node name="Label" type="Label" parent="PrintNN/VBoxContainer2"]
margin_right = 80.0
margin_bottom = 14.0
text = "Print"
align = 1
uppercase = true

[node name="CheckButton" type="TextureButton" parent="PrintNN/VBoxContainer2"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 98.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UseChampionBoi" type="PanelContainer" parent="."]
margin_left = 510.147
margin_top = 0.310773
margin_right = 604.147
margin_bottom = 112.311
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="UseChampionBoi"]
margin_left = 7.0
margin_top = 7.0
margin_right = 87.0
margin_bottom = 105.0

[node name="Label" type="Label" parent="UseChampionBoi/VBoxContainer2"]
margin_right = 80.0
margin_bottom = 14.0
text = "Champion"
align = 1
uppercase = true

[node name="CheckButton" type="TextureButton" parent="UseChampionBoi/VBoxContainer2"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 98.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="Display Sensor/ControlCenter/CheckButton" to="." method="_on_DisplaySensor_toggled"]
[connection signal="toggled" from="SelfDrive/ControlCenter/CheckButton" to="." method="_on_ManualDrive_toggled"]
[connection signal="pressed" from="DiscardBestBoi/VBoxContainer/CheckButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="CarGenerator/VBoxContainer/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="PrintNN/VBoxContainer2/CheckButton" to="." method="_on_PrintButton_pressed"]
[connection signal="pressed" from="UseChampionBoi/VBoxContainer2/CheckButton" to="." method="_on_UseChampionBoi_pressed"]
